# Multilabeler

./: LICENSE  README.md  setup.py  use_case_of_mutlilabel.ipynb  use_case_of_mutlilabeler.ipynb
multilabeler/: Multilabeler.py  README.md  __init__.py  lincense.txt  setup.cfg
