[metadata]
description-file =README.med
name = example-pkg-YOUR-USERNAME-HERE
version = 0.4
author = 'Abraham Owodunni'
author_email = 'owodunniabraham@gmail.com'
description = Prediction of two dependent labels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/owos/Multilabeler
project_urls =

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 